# upscale-relay

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
desktop_client/: __init__.py  app.py  chapters.py  main_window.py  mpv_view.py  options.py  player_view.py  settings.py  theme.py
docs/: BENCH.md  CLIENT_LINUX.md  CLIENT_WINDOWS.md  LIBRARY_SORT_PLAN.md  PLAN.md  PROTOCOL.md  README.md  SEEK_LATENCY_PLAN.md  SERVER_LIBRARY.md  TIER_NOTES.md
packaging/: make_icon.py  server_entry.py  server_gui_entry.py
relay_client_core/: __init__.py  cli.py  client.py  demux.py
relay_media/: __init__.py  demux.py
relay_protocol/: __init__.py  framing.py
relay_server/: __init__.py  autostart.py  crashinfo.py  gui_settings.py  library.py  logo.py  mdns.py  pipeline.py  runtime_bootstrap.py  server.py  session.py  tray.py
tests/: test_chapters.py  test_desktop_options.py  test_downlink_receiver.py  test_encode_profiles.py  test_fit.py  test_infer_worker_dispatch.py  test_mdns.py  test_model_manifest.py  test_mpv_native_display.py  test_runtime_bootstrap.py  test_server_library.py  test_server_library_gui.py  test_server_stats_logging.py  test_server_tray.py  test_session_progress.py  test_streaming.py  test_tiling.py
tools/: make_test_model.py
upscale_cli/: __init__.py  bench.py  cli.py  encode.py  fit.py  infer.py  infer_worker.py  info.py  manifest.py  sample.py  stages.py  wrap_uint8.py
