[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "upscale-cli"
version = "0.10.0"
description = "Video upscale relay - offline pipeline CLI (phase 1)"
requires-python = ">=3.11"
dependencies = [
    "av>=13",
    "numpy>=1.26",
    "aiohttp>=3.9",
    "zeroconf>=0.132",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.6",
    "qasync>=0.27",
    "python-mpv>=1.0",
]
# Server tray GUI (Windows): Qt without the client's python-mpv dependency.
server-gui = [
    "PySide6>=6.6",
    "qasync>=0.27",
    "onnx==1.22.0",
]
# Optional source installation of the same exact stack that the small Windows
# release installs into its per-user runtime on first launch.
nvidia = [
    "onnx==1.22.0",
    "onnxruntime-gpu==1.23.2",
    "tensorrt-cu12-libs==10.13.3.9.post1",
    "cuda-toolkit==12.9.2.0",
    "nvidia-cublas-cu12==12.9.2.10",
    "nvidia-cuda-nvrtc-cu12==12.9.86",
    "nvidia-cuda-runtime-cu12==12.9.79",
    "nvidia-cudnn-cu12==9.24.0.43",
    "nvidia-cufft-cu12==11.4.1.4",
    "nvidia-nvjitlink-cu12==12.9.86",
]

[project.scripts]
upscale-cli = "upscale_cli.cli:main"
relay-server = "relay_server.server:main"
relay-server-gui = "relay_server.tray:main"
relay-client = "relay_client_core.cli:main"
relay-desktop = "desktop_client.app:main"

[tool.setuptools.packages.find]
include = ["upscale_cli*", "relay_protocol*", "relay_media*", "relay_server*", "relay_client_core*", "desktop_client*"]
